update new to sdr guide with suggested hardware updates

--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -294,12 +294,12 @@ equal. The generic ones found for under $10 on eBay may have inferior noise
 performance and frequency stability.</p>
 
 <p>Two popular dongles that have been vetted by the community are the <a href="https://www.rtl-sdr.com/buy-rtl-sdr-dvb-t-dongles/">RTL-SDR
-Blog silver dongle</a> and the
-<a href="https://www.nooelec.com/store/sdr/sdr-receivers/nesdr-mini-2-plus.html">NooElec blue
-dongle</a>.
-Both run about $20, and you can’t go wrong with either one. See this
-<a href="http://rtlsdr4everyone.blogspot.com/p/review.html">review</a> for more detailed
-testing on a variety of dongles, including these two.</p>
+Blog silver</a> and the
+<a href="https://www.nooelec.com/store/sdr/sdr-receivers/nesdr/nesdr-smart-sdr.html">NooElec NESDR SMArt
+v4</a>.
+Both run about $20 ($30 for bundle), and you can’t go wrong with either one.
+See this <a href="http://rtlsdr4everyone.blogspot.com/p/review.html">review</a> for more
+detailed testing on a variety of dongles, including these two.</p>
 
 <div align="center">
 <figure>
@@ -307,8 +307,8 @@ testing on a variety of dongles, including these two.</p>
 <figcaption>RTL-SDR Blog Silver Dongle</figcaption>
 </figure>
 <figure>
-<a href="https://www.nooelec.com/store/sdr/sdr-receivers/nesdr-mini-2-plus.html"><img src="./images/nooelec-blue-dongle-thumb.jpg" /></a>
-<figcaption>NooElec Blue Dongle</figcaption>
+<a href="https://www.nooelec.com/store/sdr/sdr-receivers/nesdr/nesdr-smart-sdr.html"><img src="./images/nooelec-smart-dongle-thumb.png" /></a>
+<figcaption>NooElec NESDR SMArt v4 Dongle</figcaption>
 </figure>
 </div>
 
@@ -351,11 +351,11 @@ of any dedicated antenna, it should be placed outdoors and at high elevation.</p
 <p>For getting started with SDR, without initially investing too much time, money,
 or real estate for an antenna, the RTL-SDR Blog’s <a href="https://amzn.to/1SLPS6F">RTL-SDR dongle and antenna
 package</a> is probably the all-around best entry level
-kit. The included tall 1.5m telescopic antenna performs decently for VHF
-signals, even when used indoors, and the shorter 20cm telescopic antenna covers
-much of the UHF band, so these two antennas can adjusted to most of the
-operating range of the RTL-SDR. All of the VHF LuaRadio examples (WBFM, NBFM,
-AX.25, POCSAG, RDS) can be run with the tall 1.5m telescopic antenna indoors.</p>
+kit. The included long telescopic antenna performs decently for VHF signals,
+even when used indoors, and the shorter telescopic antenna covers much of the
+UHF band, so these two antennas can adjusted to most of the operating range of
+the RTL-SDR. All of the VHF LuaRadio examples (WBFM, NBFM, AX.25, POCSAG, RDS)
+can be run with the long 1m telescopic antenna indoors.</p>
 
 <div style="clear: both;"></div>
 
@@ -1120,19 +1120,19 @@ upconverter designed for the lower frequency bands will translate signals from
 0 to 30 MHz to 125 to 155 MHz.</p>
 
 <p>Two popular upconverters that can be used with the RTL-SDR and other SDR
-receivers for the LF, MF, and HF bands are the <a href="https://www.nooelec.com/store/ham-it-up.html">NooElec Ham It
-Up</a> and the <a href="https://airspy.com/spyverter-r2/">Airspy
-Spyverter</a>. They are available for around $50 to
-$60 (with a shielded case).</p>
+receivers for the LF, MF, and HF bands are the <a href="https://www.nooelec.com/store/sdr/sdr-addons/ham-it-up-304/ham-it-up-plus.html">NooElec Ham It Up
+Plus</a>
+and the <a href="https://airspy.com/spyverter-r2/">Airspy SpyVerter R2</a>. They are
+available for around $50 to $60 (with a shielded case).</p>
 
 <div align="center">
 <figure>
-<a href="https://www.nooelec.com/store/ham-it-up.html"><img src="./images/nooelec-ham-it-up-thumb.gif" /></a>
-<figcaption>NooElec Ham It Up</figcaption>
+<a href="https://www.nooelec.com/store/sdr/sdr-addons/ham-it-up-304/ham-it-up-plus.html"><img src="./images/nooelec-ham-it-up-plus-thumb.png" /></a>
+<figcaption>NooElec Ham It Up Plus</figcaption>
 </figure>
 <figure>
-<a href="https://airspy.com/spyverter-r2/"><img src="./images/airspy-spyverter-thumb.png" /></a>
-<figcaption>Airspy Spyverter</figcaption>
+<a href="https://airspy.com/spyverter-r2/"><img src="./images/airspy-spyverter-r2-thumb.png" /></a>
+<figcaption>Airspy SpyVerter R2</figcaption>
 </figure>
 </div>
 
