--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="menu">
   <h1 class="title"><a href=".">LuaRadio</a></h1>
   <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><code class="version">v0.6.1</code></a>
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/CHANGELOG.md"><code class="version">v0.7.0</code></a>
   </p>
   <div class="toc">
     <ul>
@@ -45,6 +45,7 @@
             </ul>
         </li>
         <li><a href="./docs/reference-manual.html">Reference Manual</a></li>
+        <li><a href="https://groups.io/g/luaradio">Mailing List</a></li>
         <li><a href="https://github.com/vsergeev/luaradio/wiki#project-roadmap">Project Roadmap</a></li>
         <li><a href="./examples/">Examples</a>
             <ul>
@@ -73,7 +74,7 @@
   <div class="toc-header">
     <h1 class="title"><a data-scroll href="#top">LuaRadio</a></h1>
     <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.6.1</code></a>
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.7.0</code></a>
     </p>
   </div>
   <div class="toc">
@@ -106,6 +107,9 @@ hardware.</p>
 
 <p>Use GNU Radio? See <a href="docs/comparison-gnuradio.html">how LuaRadio compares to GNU
 Radio</a>.</p>
+
+<p>See the LuaRadio <a href="https://groups.io/g/luaradio">mailing list</a> for general
+discussion.</p>
 
 <h2 id="example">Example</h2>
 
